# ConsoleTestRunner-main

./: .gitignore  README.md  conftest.py  setup.cfg  setup.py  test_console_runner.py
input/: configurations.runspec.json
src/: main.py  test_runner.py
src/console_test_runner/: test_runner.py
src/console_test_runner/utils/: generate_test_scripts.py  helper.py  sm_helper.py
tests/: test_helper.py
