[metadata]
name = console_test_runner
version = 1.00.00
author = Edwin Alias
author_email = edwin.alias@seeingmachines.com
description = Build and run test cases from the command line
long_description = file: README.md
long_description_content_type = text/markdown
url = https://git.onsm.cloud/sm/dme002/tree/dme002edw
classifiers =
    Programming Language :: Python :: 3
    License :: Other/Proprietary License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    dataclasses
    pandas
    numpy
    pyyaml
    requests
    Fernet
    py-jama-rest-client
    requests
    openpyxl

[options.packages.find]
where = src

[mypy]
files = src/
check_untyped_defs = True
warn_return_any = True
warn_unused_configs = True
ignore_missing_imports = True
follow_imports = silent


